<resources>
    <string name="app_name">SocialNetworkingApp</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="confirm_password">Confirm Password...</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name...</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an Account? Register here.</string>
    <string name="or_login_with">or Login with.</string>
    <string name="country">Country...</string>
    <string name="username">Username...</string>
    <string name="save">Save</string>
    <string name="add_a_caption">Add a caption...</string>
    <string name="update_post">Update post</string>
</resources>
