<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".SetupActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setupPageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/setupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:layout_marginRight="@dimen/inputs_side_margins"
        android:layout_marginLeft="@dimen/inputs_side_margins"
        android:hint="@string/username"
        android:layout_below="@id/setupPageLogo"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="@dimen/inputs_padding"
        android:drawableLeft="@drawable/username"/>
    <EditText
        android:id="@+id/setupFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:layout_marginRight="@dimen/inputs_side_margins"
        android:layout_marginLeft="@dimen/inputs_side_margins"
        android:hint="@string/full_name"
        android:layout_below="@id/setupUsername"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="@dimen/inputs_padding"
        android:drawableLeft="@drawable/name"/>
    <EditText
        android:id="@+id/setupCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:layout_marginRight="@dimen/inputs_side_margins"
        android:layout_marginLeft="@dimen/inputs_side_margins"
        android:hint="@string/country"
        android:layout_below="@id/setupFullname"
        android:inputType="textMultiLine"
        android:background="@drawable/inputs"
        android:padding="@dimen/inputs_padding"
        android:drawableLeft="@drawable/country"/>
    <Button
        android:id="@+id/setupButtonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/setupCountry"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:text="@string/save"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:padding="@dimen/button_padding"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="18dp"/>
    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setupButtonSave"
        android:layout_marginTop="@dimen/inputs_margin_top"/>

</RelativeLayout>