<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="@dimen/image_dimensions"
        android:layout_height="@dimen/image_dimensions"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="@dimen/inputs_padding"
        android:drawableLeft="@drawable/email"
        android:layout_below="@id/loginLogo"
        android:layout_marginTop="@dimen/inputs_margin_top"/>
    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/loginEmail"
        android:background="@drawable/inputs"
        android:padding="@dimen/inputs_padding"
        android:drawableLeft="@drawable/password"
        android:layout_marginTop="@dimen/inputs_margin_top"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_below="@id/loginPassword"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:padding="@dimen/button_padding"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_text_size"
        android:textColor="#ffffff"
        android:text="@string/login"/>
    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/don_t_have_an_account_register_here"
        android:textSize="@dimen/register_textView_size"
        android:textColor="#0000ff"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="@dimen/inputs_margin_top" />
    <TextView
        android:id="@+id/loginWithTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_login_with"
        android:layout_below="@id/registerTextView"
        android:layout_marginTop="@dimen/inputs_margin_top"
        android:textSize="@dimen/register_textView_size"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/loginWithTextView">

        <ImageView
            android:id="@+id/facebookImageView"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/facebook"/>
        <ImageView
            android:id="@+id/twitterImageView"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/twitter"/>
        <ImageView
            android:id="@+id/googleImageView"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/google"/>

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#121524"
        android:layout_alignParentStart="true"
       android:layout_below="@id/linearLayout"
        android:layout_marginTop="@dimen/inputs_padding"
        android:textAlignment="center"
        android:textSize="18sp"/>

</RelativeLayout>